harmonizing crypto methods signatures